OEP: menu logout btn on tablet fixed

--- a/src/sass/oe_portal/components/navPanels/menu/_menu-info.scss
+++ b/src/sass/oe_portal/components/navPanels/menu/_menu-info.scss
@@ -36,6 +36,10 @@
 		.overflow {
 			height: calc( 100vh - #{ $header-height + 90px });
 			overflow-y: auto;
+			
+			@include tablet(){
+				height: calc( 70vh - 90px );
+			}
 	
 			@include phone-all(){
 				// menu is shifted up to maximise vertical space
